<?xml version="1.0"?>
<package format="2">
  <name>rover_gazebo_control</name>
  <version>0.0.0</version>
  <description>
    rover_gazebo_control is used with Gazebo to siumlate a rover with
    Ackermann steering.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="s2007.ravi@gmail.com">
    Ravi Sharma
  </maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="repository">
    https://github.com/mturktest123/RoverROS
  </url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="s2007.ravi@gmail.com">
    Ravi Sharma
  </author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>plotjuggler</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>rover_desc_pkg</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>robot_localization</build_depend>
  <build_export_depend>ackermann_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>plotjuggler</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rover_desc_pkg</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>plotjuggler</exec_depend>
  <build_depend>nav_core</build_depend>
  <build_depend>mbf_costmap_core</build_depend>
  <build_depend>mbf_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>teb_local_planner</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>global_planner</build_depend>
  <build_depend>move_base</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>mbf_abstract_nav</build_depend>
  <build_depend>mbf_abstract_core</build_depend>
  <build_depend>mbf_msgs</build_depend>
  <build_depend>behaviortree_cpp_v3</build_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>mbf_costmap_core</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>nav_core</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>global_planner</exec_depend>
  <exec_depend>clear_costmap_recovery</exec_depend>
  <exec_depend>move_base_flex</exec_depend>
  <exec_depend>behaviortree_cpp_v3</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>rover_desc_pkg</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mbf_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>tf</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
