<?xml version="1.0"?>
<package format="2">
  <name>rover_with_arm_desc_pkg</name>
  <version>0.0.0</version>
  <description>
    The rover_with_arm_desc_pkg package combines the rover and the arm
    to be simulated together.
  </description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="s2007.ravi@gmail.com">
    ravi
  </maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="repository">
    https://github.com/mturktest123/RoverROS
  </url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <author email="s2007.ravi@gmail.com">
    Ravi Sharma
  </author> -->


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rover_arm_desc_pkg</build_depend>
  <build_depend>rover_desc_pkg</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_export_depend>rover_arm_desc_pkg</build_export_depend>
  <build_export_depend>rover_desc_pkg</build_export_depend>
  <build_export_depend>rviz</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <build_export_depend>xacro</build_export_depend>
  <exec_depend>rover_arm_desc_pkg</exec_depend>
  <exec_depend>rover_desc_pkg</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
